--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,19 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+
+    <button routerLink="/" class="btn btn-link">На главную</button>
+  </div>
+  <div class="info">
+    <strong>Тут автор</strong>
+    <small>12.09.2021</small>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consectetur dolorem doloribus dolorum ea, fugit laborum mollitia natus quam quis quos sapiente similique voluptate. Aperiam assumenda autem dignissimos est explicabo illo in ipsa labore natus nesciunt obcaecati quisquam tenetur, vero. A adipisci consequatur laborum nam voluptate. Culpa deserunt dignissimos voluptas.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consectetur dolorem doloribus dolorum ea, fugit laborum mollitia natus quam quis quos sapiente similique voluptate. Aperiam assumenda autem dignissimos est explicabo illo in ipsa labore natus nesciunt obcaecati quisquam tenetur, vero. A adipisci consequatur laborum nam voluptate. Culpa deserunt dignissimos voluptas.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consectetur dolorem doloribus dolorum ea, fugit laborum mollitia natus quam quis quos sapiente similique voluptate. Aperiam assumenda autem dignissimos est explicabo illo in ipsa labore natus nesciunt obcaecati quisquam tenetur, vero. A adipisci consequatur laborum nam voluptate. Culpa deserunt dignissimos voluptas.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consectetur dolorem doloribus dolorum ea, fugit laborum mollitia natus quam quis quos sapiente similique voluptate. Aperiam assumenda autem dignissimos est explicabo illo in ipsa labore natus nesciunt obcaecati quisquam tenetur, vero. A adipisci consequatur laborum nam voluptate. Culpa deserunt dignissimos voluptas.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consectetur dolorem doloribus dolorum ea, fugit laborum mollitia natus quam quis quos sapiente similique voluptate. Aperiam assumenda autem dignissimos est explicabo illo in ipsa labore natus nesciunt obcaecati quisquam tenetur, vero. A adipisci consequatur laborum nam voluptate. Culpa deserunt dignissimos voluptas.</p>
+  </div>
+</div>
