--- a/src/app/admin/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/admin/shared/components/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/">Angular Admin</a>
   </h1>
 
-  <ul>
+  <ul *ngIf="auth.isAuthenticated()">
     <li routerLinkActive="active"><a [routerLink]="['/admin', 'dashboard']">Главная</a></li>
     <li routerLinkActive="active"><a [routerLink]="['/admin', 'create']">Создать</a></li>
     <li><a href="#" (click)="logout($event)">Выйти</a></li>
