--- a/src/app/admin/create-page/create-page.component.html
+++ b/src/app/admin/create-page/create-page.component.html
@@ -1,1 +1,44 @@
-<p>create-page works!</p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <h1>Создание нового поста</h1>
+  <div
+    class="form-control"
+    [ngClass]="{invalid: form.controls['title'].touched && form.controls['title'].invalid}"
+  >
+    <label for="title">Заголовок поста:</label>
+    <input id="title" type="text" formControlName="title">
+    <div
+      class="validation"
+      *ngIf="form.controls['title'].touched && form.controls['title'].invalid"
+    >
+      <small *ngIf="form.controls['title'].hasError('required')">
+        Введите заголовок!
+      </small>
+    </div>
+  </div>
+
+  <div class="form-control">
+    <label>Контент поста:</label>
+
+  </div>
+
+  <div
+    class="form-control"
+    [ngClass]="{invalid: form.controls['author'].touched && form.controls['author'].invalid}"
+  >
+    <label for="author">Автор поста:</label>
+    <input id="author" type="text" formControlName="author">
+    <div
+      class="validation"
+      *ngIf="form.controls['author'].touched && form.controls['author'].invalid"
+    >
+      <small *ngIf="form.controls['author'].hasError('required')">
+        Введите автора поста!
+      </small>
+    </div>
+  </div>
+  <button
+    type="submit"
+    class="btn btn-block btn-dark"
+    [disabled]="form.invalid"
+  >Создать пост</button>
+</form>
