--- a/src/app/admin/edit-page/edit-page.component.html
+++ b/src/app/admin/edit-page/edit-page.component.html
@@ -1,1 +1,28 @@
-<p>edit-page works!</p>
+<div *ngIf="form; else loading">
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <div
+      class="form-control"
+      [ngClass]="{invalid: form.controls['title'].touched && form.controls['title'].invalid}"
+    >
+      <label for="title">Заголовок поста:</label>
+      <input id="title" type="text" formControlName="title">
+      <div
+        class="validation"
+        *ngIf="form.controls['title'].touched && form.controls['title'].invalid"
+      >
+        <small *ngIf="form.controls['title'].hasError('required')">
+          Введите заголовок!
+        </small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <quill-editor formControlName="text"></quill-editor>
+    </div>
+
+    <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Обновить</button>
+  </form>
+</div>
+<ng-template #loading>
+  <p class="text-center">Идет загрузка...</p>
+</ng-template>
