--- a/src/app/shared/components/post/post.component.html
+++ b/src/app/shared/components/post/post.component.html
@@ -1,16 +1,16 @@
 <div class="card">
   <div class="card-header">
-    <h2>Post title</h2>
+    <h2>{{post.title}}</h2>
 
-    <small>12.09.2021</small>
+    <small>{{post.date | date:'dd-MM-YYYY'}}</small>
   </div>
 
   <div>
-    <small>GantZ</small>
+    <small>{{post.author}}</small>
   </div>
 
   <button
-    [routerLink]="['/post', 123]"
+    [routerLink]="['/post', post.id]"
     class="btn btn-dark"
   >Открыть</button>
 </div>
